# speedrunning-datascience

./: .gitignore  README.md  pyproject.toml
spaceflights-pyspark/: .gitignore  README.md  pyproject.toml  requirements.txt
spaceflights-pyspark/conf/base/: catalog.yml  parameters_data_processing.yml
spaceflights-pyspark/docs/source/: conf.py  index.rst
spaceflights-pyspark/src/spaceflights_pyspark/: __init__.py  __main__.py  settings.py
spaceflights-pyspark/src/spaceflights_pyspark/pipelines/data_processing/: __init__.py  archive.py  create_dataset.py  data_preprocessing.py  nodes.py  train_classifier.py
spaceflights-pyspark/tests/: test_run.py
spaceflights-pyspark/tests/pipelines/: test_data_science.py
